# mapping_citizen_voices

./: LICENSE  README.md  pyproject.toml  requirements.txt
app/: Home.py
app/.streamlit/: config.toml
app/data/: district_data.csv  district_topic_proportions.csv  districts.geojson  indexes.csv  lda_corpus.mm  lda_dictionary.dict  lda_model.model  lda_model.model.expElogbeta.npy  lda_model.model.id2word  lda_model.model.state  pro_merged.csv  proposals_by_round_district.csv  sample_proposals.csv  top_proposals_per_topic.csv  topic_numbers.csv  weighted_averages_cleaned.csv
app/pages/: RQ1.py  RQ2.py  RQ3.py
