[tool.poetry]
name = "mapping-citizen-voices"
version = "0.1.0"
description = "Mapping Citizen Voices: Transforming Participatory Budgeting with Combined Data Streams in Helsinki"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
streamlit = "^1.32"
pandas = "^2.2"
numpy = "^1.26"
folium = "^0.15"
streamlit-folium = "^0.14"
plotly = "^5.20"
streamlit-highcharts = "^0.1.0"
gensim = "^4.3"
scikit-learn = "^1.4"
spacy = "^3.8"
matplotlib = "^3.8"
geopandas = "^1.1.1"
fi-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/fi_core_news_sm-3.8.0/fi_core_news_sm-3.8.0-py3-none-any.whl" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
